# hs-polymap

./: .gitignore  README.md  polymap.cabal
examples/basic/: Main.hs
src/Data/: PolyMap.hs
src/Data/PolyMap/: Nat.hs  Relation.hs  Storage.hs
src/Data/PolyMap/Storage/: List.hs  Set.hs
