name:                polymap
version:             0.1.0.0
synopsis:            Polydirectional maps
description:         Polydirectional maps for Haskell with flexible collection and relation storage.
license:             PublicDomain
license-file:        LICENSE
author:              David Farrell
maintainer:          David Farrell <shokku.ra@gmail.com>
copyright:           Copyright (C) 2015 David Farrell
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/shockkolate/hs-polymap.git

library
  exposed-modules:     Data.Polymap
  build-depends:       base >=4.8 && <5.0
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -W
